--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["python312"]
 
 [phases.install]
-cmds = ["pip install -r requirements.txt"]
+cmds = ["python3 -m pip install --upgrade pip setuptools wheel", "python3 -m pip install -r requirements.txt"]
 
 [start]
-cmd = "python run_server.py"
+cmd = "python3 run_server.py"
