--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.setup]
-nixPkgs = ["python312"]
+nixPkgs = ["python312Full"]
 
 [phases.install]
-cmds = ["python3 -m pip install --upgrade pip setuptools wheel", "python3 -m pip install -r requirements.txt"]
+cmds = ["python3 -m pip install -r requirements.txt"]
 
 [start]
 cmd = "python3 run_server.py"
